-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9.0.1, 10
-
Component/s: hotspot
-
b42
-
x86
-
os_x
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8196044 | 11 | Rickard Backman | P2 | Resolved | Fixed | b01 |
| JDK-8197766 | 10u-cpu | Rickard Backman | P2 | Resolved | Fixed | master |
| JDK-8200970 | 10.0.2 | Unassigned | P2 | Resolved | Fixed | b01 |
| JDK-8196693 | 10.0.1 | Rickard Backman | P2 | Resolved | Fixed | b04 |
| JDK-8265811 | openjdk8u302 | Rickard Backman | P2 | Resolved | Fixed | b01 |
| JDK-8263836 | openjdk8u292 | Rickard Backman | P2 | Resolved | Fixed | b08 |
| JDK-8310115 | 8u391 | Fairoz Matte | P2 | Closed | Fixed | b01 |
api/java_time/tck/java/time/index.html#TCKLocalDate and api/java_time/tck/java/time/index.html#TCKDuration are failing.
There seems to miss a cast from long to int:
java.time.DateTimeException: Invalid value for EpochDay (valid values -365243219162 - 365241780471): -9223371671612995343
I also see this with my own build of the current jdk/jdk repo.
See also attached output.
Seen with
java version "9.0.1"
Java(TM) SE Runtime Environment (build 9.0.1+11)
Java HotSpot(TM) 64-Bit Server VM (build 9.0.1+11, mixed mode)
Commandline to reproduce:
bin/java -cp .../JCK-runtime-9/classes/:.../JCK-runtime-9/lib/extensions/ -Xcomp -Xbatch -XX:-TieredCompilation com.oracle.tck.lib.testng.TestNGRunner -testclass:tck.java.time.TCKLocalDate
- backported by
-
JDK-8196044 JCK tests produce incorrect results with C2
-
- Resolved
-
-
JDK-8196693 JCK tests produce incorrect results with C2
-
- Resolved
-
-
JDK-8197766 JCK tests produce incorrect results with C2
-
- Resolved
-
-
JDK-8200970 JCK tests produce incorrect results with C2
-
- Resolved
-
-
JDK-8263836 JCK tests produce incorrect results with C2
-
- Resolved
-
-
JDK-8265811 JCK tests produce incorrect results with C2
-
- Resolved
-
-
JDK-8310115 JCK tests produce incorrect results with C2
-
- Closed
-
- relates to
-
JDK-8196568 [Graal] LongMulOverflowTest.java fails with "runTestOverflow() did not overflow"
-
- Resolved
-
-
JDK-8196954 gtest/GTestWrapper.java fails opto.mathexact_test_vm
-
- Closed
-