8191915: JCK tests produce incorrect results with C2

Reviewed-by: thartmann, vlivanov, goetz